Social Icons Issues Fixed, Support for Vine Social Icon Removed, Support For Pinterest Social Icon Added, Slabo Font Issue Fixed, Minor Bug Fixes, Version Updated, Public Release v 1.1.1

--- a/Readme.html
+++ b/Readme.html
@@ -6,7 +6,7 @@
       <body>
         <h1 id="ih-business-pro">IH Business Pro</h1>
 <p><strong>Contributors:</strong> (inkhive)<br><strong>Requires at least:</strong> WordPress 4.4<br><strong>Tested up to:</strong> WordPress 4.9
-<strong>Version:</strong> 1.1.0
+<strong>Version:</strong> 1.1.1
 <strong>License:</strong> GPL v3<br><strong>License URI:</strong> <a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html</a><br><strong>Tags:</strong> custom-background, two-columns, one-column, custom-colors, flexible-header, theme-options, right-sidebar, grid-layout, custom-menu, threaded-comments, translation-ready, featured-images, blog, full-width-template, e-commerce, footer-widgets, entertainment, photography, featured-image-header</p>
 <p>Creative and Beautiful WordPress Theme with a Large Header</p>
 <h2 id="description">Description</h2>
@@ -150,6 +150,14 @@ Source: <a href="https://www.pexels.com/photo-license/">https://www.pexels.com/p
 <li>Customizer Upgraded</li>
 <li>Header Text Feature Improved</li>
 <li>Removable Support Added For Footer Credit Line </li>
+</ul>
+<h3 id="version-1-1-1">Version 1.1.1</h3>
+<ul>
+<li>Social Icon Issues Fixed</li>
+<li>Support for Vine Social Icon Removed</li>
+<li>Support for Pinterest Social Icon Added</li>
+<li>Slabo Font Issue Fixed</li>
+<li>Minor Bug Fixes</li>
 </ul>
 
       </body>
