--- a/Readme.html
+++ b/Readme.html
@@ -6,7 +6,7 @@
       <body>
         <h1 id="ih-business-pro">IH Business Pro</h1>
 <p><strong>Contributors:</strong> (inkhive)<br><strong>Requires at least:</strong> WordPress 4.4<br><strong>Tested up to:</strong> WordPress 4.9
-<strong>Version:</strong> 1.1.1
+<strong>Version:</strong> 1.1.2
 <strong>License:</strong> GPL v3<br><strong>License URI:</strong> <a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html</a><br><strong>Tags:</strong> custom-background, two-columns, one-column, custom-colors, flexible-header, theme-options, right-sidebar, grid-layout, custom-menu, threaded-comments, translation-ready, featured-images, blog, full-width-template, e-commerce, footer-widgets, entertainment, photography, featured-image-header</p>
 <p>Creative and Beautiful WordPress Theme with a Large Header</p>
 <h2 id="description">Description</h2>
@@ -158,6 +158,10 @@ Source: <a href="https://www.pexels.com/photo-license/">https://www.pexels.com/p
 <li>Support for Pinterest Social Icon Added</li>
 <li>Slabo Font Issue Fixed</li>
 <li>Minor Bug Fixes</li>
+</ul>
+<h3 id="version-1-1-2">Version 1.1.2</h3>
+<ul>
+<li>Guttenberg Ready</li>
 </ul>
 
       </body>
